// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionTable should render component 1`] = `
<View
  style={
    Object {
      "flexBasis": 0,
      "flexGrow": 1,
      "height": "100%",
    }
  }
>
  <View
    columnWidth={
      Array [
        50,
        "auto",
        65,
        65,
        65,
        65,
        100,
        130,
        40,
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderColor": "#e9e9e9",
          "borderRadius": 4,
          "borderWidth": 1,
          "elevation": 5,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 3.84,
          "width": "100%",
        },
        Object {
          "borderWidth": 0,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "minHeight": 48,
              "paddingHorizontal": 16,
            },
            undefined,
            Object {
              "backgroundColor": "#F8F9FB",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "width": 50,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignContent": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingVertical": 12,
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "fontSize": 12,
                      "fontWeight": "500",
                      "height": 24,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.6)",
                    },
                  ],
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignContent": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingVertical": 12,
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "fontSize": 12,
                      "fontWeight": "500",
                      "height": 24,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.6)",
                    },
                  ],
                ]
              }
            >
              PRODUCT
            </Text>
          </View>
        </View>
        <View>
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignContent": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingVertical": 12,
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "fontSize": 12,
                      "fontWeight": "500",
                      "height": 24,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.6)",
                    },
                  ],
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderStyle": "solid",
              "borderTopWidth": 1,
              "minHeight": 48,
              "paddingHorizontal": 16,
            },
            undefined,
            Object {
              "backgroundColor": "#ffffff",
              "borderTopColor": "#F8F9FB",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "width": 50,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={Object {}}
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  centered={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 6,
                      "left": 6,
                      "right": 6,
                      "top": 6,
                    }
                  }
                  nativeID="animatedComponent"
                  onClick={[Function]}
                  onLayout={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  pointerEvents="box-only"
                  style={Object {}}
                >
                  <View
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Array [
                          Object {
                            "alignItems": "center",
                            "justifyContent": "center",
                            "margin": 6,
                            "overflow": "hidden",
                          },
                          Object {
                            "borderRadius": 17.25,
                            "height": 34.5,
                            "width": 34.5,
                          },
                          undefined,
                          Object {
                            "alignContent": "center",
                            "alignItems": "center",
                          },
                        ],
                      ]
                    }
                  >
                    <View>
                      <Text
                        accessibilityElementsHidden={true}
                        allowFontScaling={false}
                        importantForAccessibility="no-hide-descendants"
                        pointerEvents="none"
                        style={
                          Array [
                            Object {
                              "color": "#4D8FF5",
                              "fontSize": 23,
                            },
                            Array [
                              Object {
                                "transform": Array [
                                  Object {
                                    "scaleX": 1,
                                  },
                                ],
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                            ],
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "bottom": 0,
                          "left": 0,
                          "overflow": "hidden",
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "borderRadius": 0,
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "flex": 1,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "paddingVertical": 5,
                  }
                }
              >
                <View
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  nativeID="animatedComponent"
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#0070d2",
                        "marginBottom": 5,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "borderRadius": 10,
                        "flexDirection": "row",
                        "paddingHorizontal": 6,
                        "paddingVertical": 2,
                      },
                      Object {
                        "borderRadius": 15,
                        "fontSize": 16,
                        "paddingHorizontal": 8,
                        "paddingVertical": 6,
                      },
                      Object {
                        "backgroundColor": "#ecebea",
                        "marginRight": 5,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "white",
                          "fontSize": 12,
                          "fontWeight": "700",
                        },
                        Object {
                          "color": "#000",
                        },
                      ]
                    }
                  >
                    Info
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "width": 25,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                centered={true}
                collapsable={false}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 6,
                    "left": 6,
                    "right": 6,
                    "top": 6,
                  }
                }
                nativeID="animatedComponent"
                onClick={[Function]}
                onLayout={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                pointerEvents="box-only"
                style={Object {}}
              >
                <View
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                          "margin": 6,
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 18.75,
                          "height": 37.5,
                          "width": 37.5,
                        },
                        undefined,
                        Object {
                          "opacity": 0.9,
                        },
                      ],
                    ]
                  }
                >
                  <View>
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontSize": 25,
                          },
                          Array [
                            Object {
                              "transform": Array [
                                Object {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ],
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "bottom": 0,
                        "left": 0,
                        "overflow": "hidden",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "borderRadius": 0,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        nativeID="animatedComponent"
        pointerEvents="none"
        style={
          Object {
            "height": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          forwardedRef={[Function]}
          nativeID="animatedComponent"
          onLayout={[Function]}
          style={Object {}}
        >
          <View
            style={
              Object {
                "backgroundColor": "white",
                "paddingHorizontal": 15,
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "500",
                      "marginRight": 5,
                    }
                  }
                >
                  OPENING BALANCE
                </Text>
              </View>
              <Text
                numberOfLines={1}
              />
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "500",
                      "marginRight": 5,
                    }
                  }
                >
                  QTY. IN
                </Text>
              </View>
              <Text
                numberOfLines={1}
              />
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "500",
                      "marginRight": 5,
                    }
                  }
                >
                  QTY. OUT
                </Text>
              </View>
              <Text
                numberOfLines={1}
              />
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "500",
                      "marginRight": 5,
                    }
                  }
                >
                  SYS. COUNT
                </Text>
              </View>
              <Text
                numberOfLines={1}
              />
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "500",
                      "marginRight": 5,
                    }
                  }
                >
                  PHYSICAL COUNT
                </Text>
              </View>
              <View
                style={
                  Object {
                    "paddingVertical": 5,
                  }
                }
              >
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Object {
                        "width": 176,
                      },
                      Object {
                        "width": 80,
                      },
                      Object {
                        "opacity": 1,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "borderColor": "#D9D9D9",
                          "borderRadius": 4,
                          "borderWidth": 1,
                        },
                        Object {
                          "width": 80,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "height": 40,
                          "minHeight": 40,
                          "overflow": "hidden",
                          "paddingBottom": 0,
                          "paddingTop": 0,
                        }
                      }
                    >
                      <TextInput
                        editable={true}
                        maxResizableWidth={750}
                        minHeight={60}
                        minWidth={0}
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        paddingLeft={8}
                        paddingRight={8}
                        placeholderTextColor="rgba(0, 0, 0, 0.54)"
                        selectionColor="#0768FD"
                        style={
                          Array [
                            Object {
                              "margin": 0,
                              "textAlign": "left",
                              "zIndex": 5,
                            },
                            undefined,
                            Object {
                              "color": "#000000",
                              "fontFamily": "System",
                              "fontSize": 16,
                              "fontWeight": undefined,
                              "height": 40,
                              "minHeight": 0,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                              "paddingVertical": 5,
                              "textAlignVertical": "center",
                              "width": "100%",
                            },
                          ]
                        }
                        value="1"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "500",
                      "marginRight": 5,
                    }
                  }
                >
                  REASON
                </Text>
              </View>
              <View
                style={
                  Object {
                    "paddingVertical": 5,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                >
                  <View>
                    <View
                      collapsable={false}
                    >
                      <View
                        onLayout={[Function]}
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flexDirection": "row",
                            },
                            Object {
                              "backgroundColor": undefined,
                              "borderColor": "#d9d9d9",
                              "borderRadius": 4,
                              "borderWidth": 1,
                              "elevation": 0,
                              "height": 40,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "flex": 1,
                              "flexDirection": "row",
                              "flexGrow": 1,
                              "paddingLeft": 8,
                            }
                          }
                        >
                          <View
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            hitSlop={
                              Object {
                                "bottom": 14,
                                "left": 14,
                                "right": 14,
                                "top": 14,
                              }
                            }
                            nativeID="animatedComponent"
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "flex": 1,
                                "opacity": 1,
                              }
                            }
                          >
                            <Text
                              numberOfLines={1}
                              style={
                                Array [
                                  Object {
                                    "color": "rgba(0, 0, 0, 0.54)",
                                    "fontFamily": "System",
                                    "fontSize": 16,
                                    "fontWeight": "400",
                                  },
                                ]
                              }
                            >
                              -None-
                            </Text>
                          </View>
                        </View>
                        <View
                          accessibilityRole="button"
                          accessibilityState={
                            Object {
                              "disabled": false,
                            }
                          }
                          accessible={true}
                          centered={true}
                          collapsable={false}
                          focusable={true}
                          hitSlop={
                            Object {
                              "bottom": 6,
                              "left": 6,
                              "right": 6,
                              "top": 6,
                            }
                          }
                          nativeID="animatedComponent"
                          onClick={[Function]}
                          onLayout={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          pointerEvents="box-only"
                          style={Object {}}
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "overflow": "hidden",
                                },
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                    "margin": 6,
                                    "overflow": "hidden",
                                  },
                                  Object {
                                    "borderRadius": 18,
                                    "height": 36,
                                    "width": 36,
                                  },
                                  undefined,
                                  Object {
                                    "margin": 0,
                                  },
                                ],
                              ]
                            }
                          >
                            <View>
                              <Text
                                accessibilityElementsHidden={true}
                                allowFontScaling={false}
                                importantForAccessibility="no-hide-descendants"
                                pointerEvents="none"
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 24,
                                    },
                                    Array [
                                      Object {
                                        "transform": Array [
                                          Object {
                                            "scaleX": 1,
                                          },
                                        ],
                                      },
                                      Object {
                                        "backgroundColor": "transparent",
                                      },
                                    ],
                                    Object {
                                      "fontFamily": "Material Design Icons",
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    },
                                    Object {},
                                  ]
                                }
                              >
                                
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "transparent",
                                  "bottom": 0,
                                  "left": 0,
                                  "overflow": "hidden",
                                  "position": "absolute",
                                  "right": 0,
                                  "top": 0,
                                },
                                Object {
                                  "borderRadius": 0,
                                },
                              ]
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "500",
                      "marginRight": 5,
                    }
                  }
                />
              </View>
              <View
                style={Object {}}
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  centered={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 6,
                      "left": 6,
                      "right": 6,
                      "top": 6,
                    }
                  }
                  nativeID="animatedComponent"
                  onClick={[Function]}
                  onLayout={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  pointerEvents="box-only"
                  style={Object {}}
                >
                  <View
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Array [
                          Object {
                            "alignItems": "center",
                            "justifyContent": "center",
                            "margin": 6,
                            "overflow": "hidden",
                          },
                          Object {
                            "borderRadius": 17.25,
                            "height": 34.5,
                            "width": 34.5,
                          },
                          undefined,
                          Object {
                            "alignContent": "center",
                            "alignItems": "center",
                          },
                        ],
                      ]
                    }
                  >
                    <View>
                      <Text
                        accessibilityElementsHidden={true}
                        allowFontScaling={false}
                        importantForAccessibility="no-hide-descendants"
                        pointerEvents="none"
                        style={
                          Array [
                            Object {
                              "color": "#000000",
                              "fontSize": 23,
                            },
                            Array [
                              Object {
                                "transform": Array [
                                  Object {
                                    "scaleX": 1,
                                  },
                                ],
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                            ],
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "bottom": 0,
                          "left": 0,
                          "overflow": "hidden",
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "borderRadius": 0,
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionTable should render component with different record type 1`] = `
<View
  style={
    Object {
      "flexBasis": 0,
      "flexGrow": 1,
      "height": "100%",
    }
  }
>
  <View
    columnWidth={
      Array [
        "auto",
        150,
        130,
        50,
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderColor": "#e9e9e9",
          "borderRadius": 4,
          "borderWidth": 1,
          "elevation": 5,
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.4,
          "shadowRadius": 3.84,
          "width": "100%",
        },
        Object {
          "borderWidth": 0,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "minHeight": 48,
              "paddingHorizontal": 16,
            },
            undefined,
            Object {
              "backgroundColor": "#F8F9FB",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignContent": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingVertical": 12,
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "fontSize": 12,
                      "fontWeight": "500",
                      "height": 24,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.6)",
                    },
                  ],
                ]
              }
            >
              PRODUCT
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 150,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignContent": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingVertical": 12,
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "fontSize": 12,
                      "fontWeight": "500",
                      "height": 24,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.6)",
                    },
                  ],
                ]
              }
            >
              PHYSICAL COUNT
            </Text>
          </View>
        </View>
        <View>
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignContent": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingVertical": 12,
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "textAlign": "left",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "fontSize": 12,
                      "fontWeight": "500",
                      "height": 24,
                      "lineHeight": 24,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.6)",
                    },
                  ],
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderStyle": "solid",
              "borderTopWidth": 1,
              "minHeight": 48,
              "paddingHorizontal": 16,
            },
            undefined,
            Object {
              "backgroundColor": "#ffffff",
              "borderTopColor": "#F8F9FB",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "flex": 1,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "paddingVertical": 5,
                  }
                }
              >
                <View
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  nativeID="animatedComponent"
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#0070d2",
                        "marginBottom": 5,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "alignSelf": "flex-start",
                        "borderRadius": 10,
                        "flexDirection": "row",
                        "paddingHorizontal": 6,
                        "paddingVertical": 2,
                      },
                      Object {
                        "borderRadius": 15,
                        "fontSize": 16,
                        "paddingHorizontal": 8,
                        "paddingVertical": 6,
                      },
                      Object {
                        "backgroundColor": "#ecebea",
                        "marginRight": 5,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "white",
                          "fontSize": 12,
                          "fontWeight": "700",
                        },
                        Object {
                          "color": "#000",
                        },
                      ]
                    }
                  >
                    Info
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "width": 150,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "paddingVertical": 5,
                  }
                }
              >
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Object {
                        "width": 176,
                      },
                      Object {
                        "width": 80,
                      },
                      Object {
                        "opacity": 1,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "borderColor": "#D9D9D9",
                          "borderRadius": 0,
                          "borderWidth": 0,
                        },
                        Object {
                          "width": 80,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "height": 40,
                          "minHeight": 40,
                          "overflow": "hidden",
                          "paddingBottom": 0,
                          "paddingTop": 0,
                        }
                      }
                    >
                      <TextInput
                        editable={false}
                        maxResizableWidth={750}
                        minHeight={60}
                        minWidth={0}
                        onBlur={[Function]}
                        onChangeText={[Function]}
                        onFocus={[Function]}
                        paddingLeft={8}
                        paddingRight={8}
                        placeholderTextColor="rgba(0, 0, 0, 0.54)"
                        selectionColor="#0768FD"
                        style={
                          Array [
                            Object {
                              "margin": 0,
                              "textAlign": "left",
                              "zIndex": 5,
                            },
                            undefined,
                            Object {
                              "color": "#000000",
                              "fontFamily": "System",
                              "fontSize": 16,
                              "fontWeight": undefined,
                              "height": 40,
                              "minHeight": 0,
                              "paddingLeft": 8,
                              "paddingRight": 8,
                              "paddingVertical": 5,
                              "textAlignVertical": "center",
                              "width": "100%",
                            },
                          ]
                        }
                        value="1"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "width": 25,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                centered={true}
                collapsable={false}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 6,
                    "left": 6,
                    "right": 6,
                    "top": 6,
                  }
                }
                nativeID="animatedComponent"
                onClick={[Function]}
                onLayout={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                pointerEvents="box-only"
                style={Object {}}
              >
                <View
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                          "margin": 6,
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 18.75,
                          "height": 37.5,
                          "width": 37.5,
                        },
                        undefined,
                        Object {
                          "opacity": 0.9,
                        },
                      ],
                    ]
                  }
                >
                  <View>
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontSize": 25,
                          },
                          Array [
                            Object {
                              "transform": Array [
                                Object {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ],
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "bottom": 0,
                        "left": 0,
                        "overflow": "hidden",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "borderRadius": 0,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        nativeID="animatedComponent"
        pointerEvents="none"
        style={
          Object {
            "height": 0,
            "overflow": "hidden",
          }
        }
      >
        <View
          collapsable={false}
          forwardedRef={[Function]}
          nativeID="animatedComponent"
          onLayout={[Function]}
          style={Object {}}
        >
          <View
            style={
              Object {
                "backgroundColor": "white",
                "paddingHorizontal": 15,
              }
            }
          >
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "500",
                      "marginRight": 5,
                    }
                  }
                >
                  REASON
                </Text>
              </View>
              <Text />
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontWeight": "500",
                      "marginRight": 5,
                    }
                  }
                />
              </View>
              <View
                style={Object {}}
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  centered={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 6,
                      "left": 6,
                      "right": 6,
                      "top": 6,
                    }
                  }
                  nativeID="animatedComponent"
                  onClick={[Function]}
                  onLayout={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  pointerEvents="box-only"
                  style={Object {}}
                >
                  <View
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Array [
                          Object {
                            "alignItems": "center",
                            "justifyContent": "center",
                            "margin": 6,
                            "overflow": "hidden",
                          },
                          Object {
                            "borderRadius": 17.25,
                            "height": 34.5,
                            "width": 34.5,
                          },
                          Object {
                            "opacity": 0.32,
                          },
                          Object {
                            "alignContent": "center",
                            "alignItems": "center",
                          },
                        ],
                      ]
                    }
                  >
                    <View>
                      <Text
                        accessibilityElementsHidden={true}
                        allowFontScaling={false}
                        importantForAccessibility="no-hide-descendants"
                        pointerEvents="none"
                        style={
                          Array [
                            Object {
                              "color": "#000000",
                              "fontSize": 23,
                            },
                            Array [
                              Object {
                                "transform": Array [
                                  Object {
                                    "scaleX": 1,
                                  },
                                ],
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                            ],
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "bottom": 0,
                          "left": 0,
                          "overflow": "hidden",
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        Object {
                          "borderRadius": 0,
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
